package usantatecla.mastermind.enums;

public enum StateValue {
  CLOSE,
  OPEN,
  FINISHED,
  EXIT;



}
